tests/snapshots/e2e__impact@large-estate.snap
---
source: tests/e2e.rs
expression: out
---
impact  1 impacted target  (1 workflows)

WORKFLOWS
  - .github/workflows/ci.yml
