tests/snapshots/e2e__impact@orphans-job-env-input.snap
---
source: tests/e2e.rs
expression: out
---
impact  1 impacted target  (1 workflows)

WORKFLOWS
  - .github/workflows/caller.yml
