tests/snapshots/e2e__orphans@docker-action.snap
---
source: tests/e2e.rs
expression: out
---
orphans  1 unused declaration  (1 actions)

ACTIONS
kind    target
docker  .
