tests/snapshots/e2e__orphans@js-action-node24.snap
---
source: tests/e2e.rs
expression: out
---
orphans  1 unused declaration  (1 actions)

ACTIONS
kind        target
javascript  .
