tests/snapshots/e2e__orphans_markdown@docker-action.snap
---
source: tests/e2e.rs
expression: out
---
### Orphans

1 unused declaration found: 0 workflows, 1 local action, 0 inputs, 0 outputs.

| Kind | Target | Detail |
|---|---|---|
| local-action-docker | `.` | unused |
