tests/snapshots/e2e__orphans_markdown@zizmor-findings.snap
---
source: tests/e2e.rs
expression: out
---
### Orphans

1 unused declaration found: 0 workflows, 1 local action, 0 inputs, 0 outputs.

| Kind | Target | Detail |
|---|---|---|
| local-action-composite | `.github/actions/orphan-tool` | unused |
