tests/snapshots/e2e__suggest_dedup@composite-annotations.snap
---
source: tests/e2e.rs
expression: out
---
dedup  1 workflow cluster  (threshold=0.80)

CLUSTER 1
metric           value
workflows        2
representative   .github/workflows/manifest-target.yml
triggers differ  yes

MEMBERS
member                             similarity
.github/workflows/step-target.yml  0.85

USES
label      value
common     (none)
divergent  (none)
